# ajera

./: .gitignore  .mypy.ini  .ruff.toml  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml  publish.yaml
src/ajera/: __init__.py  client.py
src/ajera/cli/: __init__.py  __main__.py  cli.py  context.py  group.py  options.py  output.py
src/ajera/cli/commands/: activities.py  bank_accounts.py  clients.py  companies.py  contacts.py  deductions.py  departments.py  employees.py  fringes.py  invoice_formats.py  ledger.py  projects.py  rate_tables.py  session.py  vendors.py
src/ajera/schemas/: client.py  contact.py  deduction.py  employee.py  fringe.py  generic.py  ledger.py  project.py  project_summary.py  project_v2.py  reference.py  session.py  vendor.py  vendor_invoice.py
tests/: conftest.py  test_client_config.py
tests/cli/: test_context.py
tests/integration/: test_client.py
tests/schemas/: test_generic.py  test_project_summary.py
