[project]
name = "ajera"
version = "0.1.4"
description = "Deltek Ajera Python API Client"
readme = "README.md"
authors = [{ name = "SB&O Inc", email = "contact@sboinc.com" }]
requires-python = ">=3.12"
dependencies = [
    "click >= 8.0.0",
    "requests >=2.0, <3",
    "pydantic >= 2.10.0",
]

[dependency-groups]
dev = [
    "mypy",
    "ruff",
    "pytest",
]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests that require a live Ajera API instance",
]

[project.scripts]
ajera = "ajera.cli:main"

[build-system]
requires = ["uv_build<0.9.0"]
build-backend = "uv_build"
