[project]
name = "ajera"
version = "0.1.4"
description = "Deltek Ajera Python API Client"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "SB&O Inc", email = "contact@sboinc.com" }]
keywords = ["deltek", "ajera", "api", "client", "cli", "accounting", "erp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.12"
dependencies = [
    "click >= 8.0.0",
    "requests >=2.0, <3",
    "pydantic >= 2.10.0",
]

[project.urls]
Homepage = "https://github.com/sbo-inc/ajera"
Repository = "https://github.com/sbo-inc/ajera"
Download = "https://github.com/sbo-inc/ajera/releases"
Issues = "https://github.com/sbo-inc/ajera/issues"

[dependency-groups]
dev = [
    "mypy",
    "ruff",
    "pytest",
]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests that require a live Ajera API instance",
]

[project.scripts]
ajera = "ajera.cli:main"

[build-system]
requires = ["uv_build<0.9.0"]
build-backend = "uv_build"
